--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "nedb": "^1.8.0",
+    "node-emoji": "^1.8.1",
     "shortid": "^2.2.13"
   }
 }
