--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lokijs": "^1.5.5",
+    "lowkie": "^1.4.0",
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.3.0",
     "nedb": "^1.8.0",
     "node-emoji": "^1.8.1",
     "shortid": "^2.2.13"
