--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^5.3.0",
     "nedb": "^1.8.0",
     "node-emoji": "^1.8.1",
-    "shortid": "^2.2.13"
+    "shortid": "^2.2.13",
+    "socket-io-server": "^1.0.5",
+    "socket.io": "^2.1.1"
   }
 }
